--- a/pos/cashier/templates/cashier.html
+++ b/pos/cashier/templates/cashier.html
@@ -48,7 +48,7 @@
 					
 				</div>
 			</div>
-				{% verbatim %}
+				{% verbatim %} 
 				<!-- <div class="ui five stackable cards"> -->
 						<!-- <td><payment id="item.id" name="item.name" edit="item.edit"></payment></td> -->
 						<!-- <payment record="record" name="record.member" end_time="record.end_time"></payment> upt="updateOpt()"-->
@@ -95,11 +95,18 @@
 							<tr>
 								<td>Orders</td>
 								<td>{{usersBill.orderName}}
-								<div ng-repeat="bname in usersBill.orderName">
-									{{bname.name}}
+								<div ng-repeat="userbill in usersBill">
+									<div ng-repeat="oName in userbill.orderName">
+										
+										{{oName.name}} {{oName.unit_price | currency:'RM'}}
+
+
+
+									</div>
+
 
 								</div>
-									
+
 
 									<!-- <div ng-repeat="i in bill.orderName"> -->
 <!-- 									<div ng-repeat="ub in usersBill">
@@ -112,9 +119,12 @@
 							<tr>
 								<td>Total Amount</td>
 								<td>
-<!-- 									Food: {{chosenBill.foodAmount}}<br>
-									Time : {{chosenBill.total_amount}} -->
-									 {{totalAmount | currency:"RM"}}
+									Food: {{foodTotal}}<br>
+									<!-- Time : {{chosenBill.total_amount}}<br> -->
+									Time: {{totalAmount | currency:"RM"}} <br>
+									Total = {{foodAndTime | currency:"RM"}} 
+
+
 
 								</td>
 							</tr>
@@ -124,7 +134,7 @@
 							</tr>
 
 						</table>
-						<div><input type="text" ng-model="userPay" ng-change="calculate(totalAmount)"> - {{totalAmount| currency}} = {{moneyChange | currency}}
+						<div><input type="text" ng-model="userPay" ng-change="calculate(foodAndTime)"> - {{foodAndTime| currency}} = {{moneyChange | currency}}
 						</div>
 						<div>
 							<button class="ui button" ng-click="pay_table()">PAY ALL</button>
