fix the menu item

--- a/pos/cashier/templates/base.html
+++ b/pos/cashier/templates/base.html
@@ -7,7 +7,7 @@
     	
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Home One || Catcolate </title>
+        <title>Catcolate </title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- favicon
@@ -19,8 +19,9 @@
 		<!-- <link href='https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.css' rel='stylesheet' type='text/css'>	  -->
 		<!-- <script   src="http://code.jquery.com/jquery-1.12.4.min.js"   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="   crossorigin="anonymous"></script> 
 		 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.js"></script>-->
-
 		 <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
+
+		 <link href="{% static "css/pos.css" %}" rel="stylesheet">
 
 	    <link rel="stylesheet" media="all" type="text/css" href="{% static "css/semantic.min.css" %}" />
 	    <script type="text/javascript" src="{% static "js/jquery-1.11.0.js" %}"></script>
