#add the membership , with discount

--- a/pos/cashier/templates/base.html
+++ b/pos/cashier/templates/base.html
@@ -40,7 +40,7 @@
     </head>
 <body>
 
-<center><div class="bigbanner">CATCOLATE BOARD GAME CAFE</div></center>
+<div class="bigbanner"><center>CATCOLATE BOARD GAME CAFE</center></div>
 
 {% if user %}
 	<!-- if user login , show his name -->
