--- a/pos/cashier/templates/base.html
+++ b/pos/cashier/templates/base.html
@@ -40,7 +40,7 @@
     </head>
 <body>
 
-<div class="bigbanner"><center>CATCOLATE BOARD GAME CAFE</center></div>
+<div class="bigbanner noprint"><center>CATCOLATE BOARD GAME CAFE</center></div>
 
 {% if user %}
 	<!-- if user login , show his name -->
