--- a/pos/cashier/templates/cashier.html
+++ b/pos/cashier/templates/cashier.html
@@ -9,8 +9,8 @@
 {% endif %}
 
 
-<div class="container" ng-app="catcolateApp">
-	<div class="ui grid " ng-controller="counterController" >
+<div class="container noprint" ng-app="catcolateApp">
+	<div class="ui grid" ng-controller="counterController" >
 
 <style>
 .redFont{
@@ -25,7 +25,7 @@
 			{% verbatim %}
 			TABLED SELECTED: {{tableNow}}
 			{% endverbatim %}
-			<div class="ui vertical pointing menu noprint">
+			<div class="ui vertical pointing menu">
 				{% verbatim %}
 
 				<a ng-class="" class="item" ng-repeat="table in tables" ng-click="selectTable(table.id)">
@@ -79,7 +79,7 @@
 </div>
 
 <div class="noprint">
-	<div class="actionMenu"><button class="ui button orange" ng-click="hold_bill()"> Hold Multiple Bill</button></div>
+	<!-- <div class="actionMenu"><button class="ui button orange" ng-click="hold_bill()"> Hold Multiple Bill</button></div> -->
 </div>
 
 {% verbatim %}
@@ -90,6 +90,7 @@
 
 			<div class="actionMenu"><button class="ui button" ng-click="unselectedTableUsers()"> Close </button></div>
 			<div class="actionMenu"><button class="ui button blue" ng-click="hold_bills()"> Hold Table Bill</button></div>
+			<div class="actionMenu"><button class="ui button blue" ng-click="print_bill()"> Print </button></div>
 		</div>
 		<div>
 			<table class="ui table">
@@ -104,37 +105,85 @@
 							{{bill.time}}
 							hrs = RM {{bill.time_spent}}
 						</div>
-
-						<div class="showReceipt" style="display:none">
-							<div ng-repeat="bill in usersBill">
-								{{bill.time}}
-								hrs = RM {{bill.time_spent}}
-							</div>
-						</div>
-
 					</td>
 				</tr>
 				<tr>
 					<td>Orders</td>
 					<td>{{usersBill.orderName}}
-						<div ng-repeat="userbill in usersBill" class="ui segment">
-							<div class="ui button teal" ng-click="user_pay($index)">Pay</div>
-							<div ng-repeat="oName in userbill.orderName" style="text-align:right">
-								{{oName.name}} {{oName.unit_price | currency:'RM'}}
+						<div class="food_receipt" style="text-align:left">
+						<div class="showReceipt">
+								<div><b>Catcolate Board Game Space</b></div>
+								<div>46A, Jalan Pendekar 13, T.U.T.A</div>
+								<div>DATE: 2 April 2017</div>
+								<hr>
+
+							<div ng-repeat="bill in usersBill" style="border-bottom:1px dotted black;margin-bottom:20px;">
+								<div>
+									<hr>
+									<div style="border-bottom:1px dotted black">
+										<table>
+											<tr>
+												<td width="20%"><b>Start From</b></td>
+												<td width="20%">{{bill.start_from | date:"yyyy-MM-dd HH:mm:ss"}}</td>
+											</tr>
+											<tr>
+												<td width="20%"><b>End At</b> </td>
+												<td width="20%">{{bill.endtime | date:"yyyy-MM-dd HH:mm:ss"}}</td>
+											</tr>
+											<tr>
+												<td width="20%"><b>Time Spent</b> </td>
+												<td width="20%">{{bill.time}} HRS </td>
+											</tr>
+											<tr>
+												<td width="20%"><b>SubTotal</b> </td>
+												<td width="20%">{{bill.time_spent| currency:'RM'}} </td>
+											</tr>
+										</table>
+									</div>
+
+									<div style="border-bottom:1px dotted black">
+										<table>
+											<tr ng-repeat="oName in bill.orderName" style="text-align:left">
+												<td width="20%"><b>{{oName.name}}</b></td>
+												<td width="20%">{{oName.unit_price | currency:'RM'}}</td>
+											</tr>
+										</table>
+									</div>
+									<div style="border-bottom:1px dotted black">
+										<table>
+											<tr>
+												<td width="20%"><b>Total</b></td>
+												<td width="20%">{{bill.subTotal | currency:'RM'}}</td>
+											</tr>
+										</table>
+									</div>
 							</div>
-							<div style="color:red;text-align:right"><b> + {{userbill.time_spent| currency:'RM'}}</b>
-							</div>
-							<hr>
-							<div style="text-align:right">{{userbill.subTotal | currency:'RM'}}</div>
-							<hr>
 						</div>
+					</div>
+					</div>
+					<!-- show print -->
+					<div ng-repeat="bill in usersBill" class="ui segment noprint">
+						<div class="noprint">
+							<div class="ui button teal" ng-click="user_pay($index)">Pay</div>
+
+							<div class="ui button" ng-class="{'0':'gray', '1':'orange', '2':'blue', '3':'red'}[bill.pay_status]" ng-click="hold_it($index)">Hold</div>
+						</div>
+						<div ng-repeat="oName in bill.orderName" style="text-align:right">
+							{{oName.name}} {{oName.unit_price | currency:'RM'}}
+						</div>
+						<div style="color:red;text-align:right"><b> + {{bill.time_spent| currency:'RM'}}</b>
+						</div>
+						<hr>
+						<div style="text-align:right">{{bill.subTotal | currency:'RM'}}</div>
+						<hr>
+					</div>
 
 					</td>
 				</tr>
 				<tr>
 					<td>Total Amount</td>
 					<td>
-						<div class="ui segment" style="text-align:right">
+						<div class="ui segment noprint" style="text-align:right">
 							Food: {{foodTotal | currency:"RM" }}<br>
 							<!-- Time : {{chosenBill.total_amount}}<br> -->
 							Time: {{totalAmount | currency:"RM"}} 
