every query should hold the bill

--- a/pos/cashier/templates/cashier.html
+++ b/pos/cashier/templates/cashier.html
@@ -69,7 +69,7 @@
 				<div style="border-style: outline;">
 <!-- 						<button class="ui button blue" ng-click="hold_bill()" >Hold</button>
 	<button class="ui button blue" ng-click="pay_bill()" >Pay</button> -->
-	<button class="ui button blue" ng-click="bill_by_table()">Pay By Table</button>
+	<button class="ui button blue" ng-click="bill_by_table_func()">Pay By Table</button>
 	<button class="ui button red" ng-click="cancel_bill()">Cancel Bill</button>
 </div>
 </div>
